tests/compilation_error/incompatible_return_type.ll
def giveMeAnInt() returns int:
    string x = "mwahaha"
    return x
